# LeniaWallpaper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.cmd
catalog/: index.json
catalog/discovered/: 0.json  1.json  10.json  100.json  1000.json  1001.json  1002.json  1003.json  1004.json  1005.json  1006.json  1007.json  1008.json  1009.json  101.json  1010.json  1011.json  1012.json  1013.json  1014.json  1015.json  1016.json  1017.json  1018.json  1019.json  102.json  1020.json  1021.json  1022.json  1023.json  1024.json  1025.json  1026.json  1027.json  1028.json  1029.json  103.json  1030.json  1031.json  1032.json  (+8153 more)
catalog/named/: 0.json  1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json  _list.json  an0000.json  an0001.json  an0002.json  an0003.json  an0004.json  an0005.json  an0006.json  an0007.json  an0008.json  an0009.json  an0010.json  an0011.json  an0012.json  an0013.json  an0014.json  an0015.json  an0016.json  an0017.json  an0018.json  an0019.json  an0020.json  an0021.json  an0022.json  an0023.json  an0024.json  an0025.json  an0026.json  an0027.json  (+435 more)
fonts/: README.txt
src/: app.rc  config.cpp  config.h  json.h  main.cpp  renderer.cpp  renderer.h  scheduler.cpp  scheduler.h  shaders.h  species.cpp  species.h  tray.cpp  tray.h  util.cpp  util.h  wallpaper_window.cpp  wallpaper_window.h
tools/: capture_wallpaper.ps1  fetch_catalog.py
